// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

// See https://developers.google.com/protocol-buffers for what's going on here.

// buf breaking: ignore (Ignore because plans are currently not persisted.)

syntax = "proto3";

package mz_expr.relation;

import "expr/src/relation/func.proto";
import "expr/src/scalar.proto";
import "google/protobuf/empty.proto";
import "repr/src/relation_and_scalar.proto";

message ProtoColumnOrder {
  uint64 column = 1;
  bool desc = 2;
  bool nulls_last = 3;
}

message ProtoWindowFrame {
  message ProtoWindowFrameBound {
    oneof kind {
      google.protobuf.Empty unbounded_preceding = 1;
      uint64 offset_preceding = 2;
      google.protobuf.Empty current_row = 3;
      uint64 offset_following = 4;
      google.protobuf.Empty unbounded_following = 5;
    }
  }

  message ProtoWindowFrameUnits {
    oneof kind {
      google.protobuf.Empty rows = 1;
      google.protobuf.Empty range = 2;
      google.protobuf.Empty groups = 3;
    }
  }

  ProtoWindowFrameUnits units = 1;
  ProtoWindowFrameBound start_bound = 2;
  ProtoWindowFrameBound end_bound = 3;
}

message ProtoAggregateExpr {
  ProtoAggregateFunc func = 1;
  mz_expr.scalar.ProtoMirScalarExpr expr = 2;
  bool distinct = 3;
}

message ProtoAggregateFunc {
  message ProtoColumnOrders {
    repeated mz_expr.relation.ProtoColumnOrder orders = 1;
  }

  message ProtoLagLead {
    ProtoColumnOrders order_by = 1;
    oneof lag_lead {
      google.protobuf.Empty lag = 2;
      google.protobuf.Empty lead = 3;
    }
    bool ignore_nulls = 4;
  }

  message ProtoFramedWindowFunc {
    ProtoColumnOrders order_by = 1;
    mz_expr.relation.ProtoWindowFrame window_frame = 2;
  }

  message ProtoWindowAggregate {
    ProtoAggregateFunc wrapped_aggregate = 1;
    ProtoColumnOrders order_by = 2;
    mz_expr.relation.ProtoWindowFrame window_frame = 3;
  }

  message ProtoFusedWindowAggregate {
    repeated ProtoAggregateFunc wrapped_aggregates = 1;
    ProtoColumnOrders order_by = 2;
    mz_expr.relation.ProtoWindowFrame window_frame = 3;
  }

  message ProtoFusedValueWindowFunc {
    repeated ProtoAggregateFunc funcs = 1;
    ProtoColumnOrders order_by = 2;
  }

  message ProtoMapAgg {
    ProtoColumnOrders order_by = 1;
    mz_repr.relation_and_scalar.ProtoScalarType value_type = 2;
  }

  oneof kind {
    google.protobuf.Empty max_numeric = 1;
    google.protobuf.Empty max_int16 = 2;
    google.protobuf.Empty max_int32 = 3;
    google.protobuf.Empty max_int64 = 4;
    google.protobuf.Empty max_float32 = 5;
    google.protobuf.Empty max_float64 = 6;
    google.protobuf.Empty max_bool = 7;
    google.protobuf.Empty max_string = 8;
    google.protobuf.Empty max_date = 9;
    google.protobuf.Empty max_timestamp = 10;
    google.protobuf.Empty max_timestamp_tz = 11;
    google.protobuf.Empty max_interval = 64;
    google.protobuf.Empty min_numeric = 12;
    google.protobuf.Empty min_int16 = 13;
    google.protobuf.Empty min_int32 = 14;
    google.protobuf.Empty min_int64 = 15;
    google.protobuf.Empty min_float32 = 16;
    google.protobuf.Empty min_float64 = 17;
    google.protobuf.Empty min_bool = 18;
    google.protobuf.Empty min_string = 19;
    google.protobuf.Empty min_date = 20;
    google.protobuf.Empty min_timestamp = 21;
    google.protobuf.Empty min_timestamp_tz = 22;
    google.protobuf.Empty min_interval = 65;
    google.protobuf.Empty sum_int16 = 23;
    google.protobuf.Empty sum_int32 = 24;
    google.protobuf.Empty sum_int64 = 25;
    google.protobuf.Empty sum_float32 = 26;
    google.protobuf.Empty sum_float64 = 27;
    google.protobuf.Empty sum_numeric = 28;
    google.protobuf.Empty count = 29;
    google.protobuf.Empty any = 30;
    google.protobuf.Empty all = 31;
    ProtoColumnOrders jsonb_agg = 32;
    ProtoColumnOrders jsonb_object_agg = 33;
    ProtoColumnOrders array_concat = 34;
    ProtoColumnOrders list_concat = 35;
    ProtoColumnOrders string_agg = 36;
    ProtoColumnOrders row_number = 37;
    ProtoColumnOrders rank = 54;
    ProtoColumnOrders dense_rank = 38;
    ProtoLagLead lag_lead = 39;
    google.protobuf.Empty dummy = 40;
    ProtoFramedWindowFunc first_value = 41;
    ProtoFramedWindowFunc last_value = 42;
    ProtoWindowAggregate window_aggregate = 55;
    ProtoFusedValueWindowFunc fused_value_window_func = 57;
    ProtoFusedWindowAggregate fused_window_aggregate = 68;
    google.protobuf.Empty max_uint16 = 43;
    google.protobuf.Empty max_uint32 = 44;
    google.protobuf.Empty max_uint64 = 45;
    google.protobuf.Empty min_uint16 = 46;
    google.protobuf.Empty min_uint32 = 47;
    google.protobuf.Empty min_uint64 = 48;
    google.protobuf.Empty sum_uint16 = 49;
    google.protobuf.Empty sum_uint32 = 50;
    google.protobuf.Empty sum_uint64 = 51;
    google.protobuf.Empty max_mz_timestamp = 52;
    google.protobuf.Empty min_mz_timestamp = 53;
    ProtoMapAgg map_agg = 56;
    google.protobuf.Empty min_time = 66;
    google.protobuf.Empty max_time = 67;
  }
}

message ProtoRowSetFinishing {
  reserved 2;
  repeated ProtoColumnOrder order_by = 1;
  optional int64 limit = 5;
  uint64 offset = 3;
  repeated uint64 project = 4;
}

message ProtoTableFunc {
  message ProtoWrap {
    repeated mz_repr.relation_and_scalar.ProtoColumnType types = 1;
    uint64 width = 2;
  }

  message ProtoTabletizedScalar {
    string name = 1;
    mz_repr.relation_and_scalar.ProtoRelationType relation = 2;
  }

  oneof kind {
    bool jsonb_each = 1;
    google.protobuf.Empty jsonb_object_keys = 2;
    bool jsonb_array_elements = 3;
    mz_expr.relation.func.ProtoAnalyzedRegex regexp_extract = 4;
    uint64 csv_extract = 5;
    google.protobuf.Empty generate_series_int32 = 6;
    google.protobuf.Empty generate_series_int64 = 7;
    google.protobuf.Empty generate_series_timestamp = 8;
    google.protobuf.Empty generate_series_timestamp_tz = 9;
    google.protobuf.Empty repeat = 10;
    mz_repr.relation_and_scalar.ProtoScalarType unnest_array = 11;
    mz_repr.relation_and_scalar.ProtoScalarType unnest_list = 12;
    ProtoWrap wrap = 13;
    google.protobuf.Empty generate_subscripts_array = 14;
    ProtoTabletizedScalar tabletized_scalar = 15;
    google.protobuf.Empty acl_explode = 16;
    google.protobuf.Empty mz_acl_explode = 17;
    mz_repr.relation_and_scalar.ProtoScalarType unnest_map = 18;
  }
}
